# wave-mainframe

./: .gitignore  Cargo.toml
src/: api_down_queue.rs  in_group_queue.rs  key_generation.rs  logs.rs  main.rs  promotion.rs  ranks.rs  roblox.rs  users.rs  verify.rs  verify_key_cleanup.rs
src/definitions/: global_state.rs  mod.rs  ranks.rs  users.rs  users_definitions.rs
src/functions/: db.rs  db_functions.rs  lb.rs  mod.rs  prestige.rs  promotion.rs  users.rs  users_functions.rs  verify.rs  verify_functions.rs
src/jobs/: api_down_queue.rs  in_group_queue.rs  mod.rs  verify_key_cleanup.rs
src/routes/: leaderboard.rs  mod.rs  users.rs  verify.rs
