[package]
name = "wave_mainframe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
firebase_realtime_database = "0.1.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = "0.11"
tokio = { version = "1", features = ["full"] }
env_logger = "0.9"
rand = "0.8"
once_cell = "1"