[package]
name = "wave_mainframe"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
firebase_realtime_database = "0.1.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls"] }
tokio = { version = "1", features = ["full"] }
env_logger = "0.9"
rand = "0.8"
log = "0.4.17"